Fix 567 - NC - Navbar icons alignment

--- a/assets/scss/partials/navigation/_main.scss
+++ b/assets/scss/partials/navigation/_main.scss
@@ -81,6 +81,7 @@ $nav-desktop-height: 115px;
                 }
 
                 .dropdown {
+                    height: auto;
                     margin-right: 25px;
                 }
 
